--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<div class="example-button-row">
-  <button mat-button>Basic</button>
-  <button mat-button disabled>Disabled</button>
-  <a mat-button href="https://www.google.com/" target="_blank">Link</a>
-</div>
+<router-outlet></router-outlet>
